# ttsvii

./: .gitignore  Cargo.toml  README.md  test_duration.sh
.github/workflows/: README.md  build.yml  ci.yml
src/: api.rs  audio.rs  log_capture.rs  main.rs  srt.rs  task.rs  web.rs
tests/: input_trans_shortened.srt
webui/: index.html  index.html.bak
